--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>myComponent</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1,  user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="style/base.css">
 	<link rel="stylesheet" type="text/css" href="style/default_layout.css">
 	<link rel="stylesheet" type="text/css" href="style/default_component.css">
@@ -20,7 +21,6 @@
 			<li><a href="style.html">style</a></li>
 			<li><a href="modal.html">modal</a></li>
 			<li><a href="placeholder.html">placeholder</a></li>
-			<li><a href="input_normalize.html">input normalize</a></li>
 			<li><a href="tooltip.html">tooltip</a></li>
 			<li><a href="tab.html">tab</a></li>
 		</ul>
