--- a/gnb.html
+++ b/gnb.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Gnb | myComponent</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1,  user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="style/base.css">
 	<link rel="stylesheet" type="text/css" href="style/default_layout.css">
 	<link rel="stylesheet" type="text/css" href="style/default_component.css">
@@ -13,6 +14,44 @@
 	<script src="guide/script.js"></script>
 </head>
 <body>
-	
+	<div id="container">
+	    <div id="header" style="height:200px; background:red; opacity:0.4; text-align:center;">
+		    <div>
+		    	<ul>
+		    		<li>
+		    			<a href="">dep1</a>
+		    			<div>
+			    			<ul>
+			    				<li><a href="">dep2</a></li>
+			    				<li><a href="">dep2</a></li>
+			    				<li><a href="">dep2</a></li>
+			    			</ul>
+			    			</div>
+		    		</li>
+		    		<li>
+		    			<a href="">dep1</a>
+		    			<div>
+			    			<ul>
+			    				<li><a href="">dep2</a></li>
+			    				<li><a href="">dep2</a></li>
+			    				<li><a href="">dep2</a></li>
+			    			</ul>
+			    			</div>
+		    		</li>
+		    		<li>
+		    			<a href="">dep1</a>
+		    			<div>
+			    			<ul>
+			    				<li><a href="">dep2</a></li>
+			    				<li><a href="">dep2</a></li>
+			    				<li><a href="">dep2</a></li>
+			    			</ul>
+			    			</div>
+		    		</li>
+		    	</ul>
+		    </div>
+		</div>
+	    <div id="content" style="margin:0 auto; width: 900px; min-height:1200px; background:green; opacity:0.4; text-align:center;"><div>content</div></div>
+	</div>
 </body>
 </html>
