--- a/placeholder.html
+++ b/placeholder.html
@@ -3,10 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Placeholder | myComponent</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1,  user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="style/base.css">
 	<link rel="stylesheet" type="text/css" href="style/default_layout.css">
 	<link rel="stylesheet" type="text/css" href="style/default_component.css">
 	<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="script/placeholder.js"></script>
 
 	<!-- guide -->
 	<link rel="stylesheet" type="text/css" href="guide/style.css">
@@ -17,112 +19,6 @@
 <div class="guide_wrap">
 	<h1 class="guide_h1">Placeholder</h1>
 	<p class="guide_p"></p>
-
-
-	<script type="text/javascript">
-		(function ( $ ) {
-			var isSupportBrower = (function(){
-				var test = document.createElement('input');
-				return 'placeholder' in test
-			})()
-
-			function myPlaceholder( element, _option ){
-				var that = this,
-					$this = $( element ),
-					initTxt = $this.attr('placeholder')
-
-				var option = $.extend({
-					isForce: false,
-					activeClass: 'myPlaceholder_active',
-					installCallback: null,
-					activeCallback: null
-				}, _option)
-
-				// 강제 설정이 아닌경우, 브라우저 체크 후 패스
-				if (!option.isForce && isSupportBrower) {
-					return
-				}
-
-				function activeCheck() {
-					if ($this.val().length == 0) {
-						$this.val( initTxt )
-						$this.addClass( option.activeClass )
-					} else {
-						$this.removeClass( option.activeClass )
-					}
-
-					// 설치 후 콜백
-					if (typeof(option.activeCallback) == 'function') {
-						option.activeCallback()
-					}
-				}
-
-				function enable() {
-					$this
-						.on('focus.myPlaceholder', function(e){
-							if ($this.val() == initTxt) {
-								$this.val('');
-							}
-
-							$this.removeClass( option.activeClass )
-						})
-						.on('blur.myPlaceholder', function(e){
-							activeCheck()
-
-							// 설치 후 콜백
-							if (typeof(option.activeCallback) == 'function') {
-								option.activeCallback()
-							}
-						})
-
-					activeCheck()
-				}
-
-				function disable() {
-					$this.off('focus.myPlaceholder')
-					$this.off('blur.myPlaceholder')
-				}
-
-				function destroy() {
-					$.removeData($this.get(0));
-					$this.off('focus.myPlaceholder')
-					$this.off('blur.myPlaceholder')
-					$this.removeClass( option.activeClass )
-				}
-
-				// 초기화
-				enable()
-				$this.attr('placeholder', '');
-
-				// 설치 후 콜백
-				if (typeof(option.installCallback) == 'function') {
-					option.installCallback()
-				}
-
-				return {
-					enable: enable,
-					disable: disable,
-					destroy: destroy
-				}
-			}
-
-			$.fn.myPlaceholder = function( _option ){
-				return this.each( function(){
-					if ( typeof(_option) == 'string' && $.data( this, "myPlaceholder" ) ){
-						if ( _option == 'enable' ){
-							$.data( this, "myPlaceholder").enable();
-						} else if ( _option == 'disable' ){
-							$.data( this, "myPlaceholder").disable();
-						} else if ( _option == 'destroy' ){
-							$.data( this, "myPlaceholder").destroy();
-						}
-					} else if ( !$.data( this, "myPlaceholder" ) ){
-						$.data( this, "myPlaceholder", new myPlaceholder( this, _option ) );
-					}
-				})
-			}
-		})( jQuery, window, document );
-	</script>
 
 
 	<h2 class="guide_h2">Option</h2>
@@ -142,9 +38,9 @@
 					<td>강제 모드 활성화 여부(지원 브라우저에서는 설치 안됨)</td>
 				</tr>
 				<tr>
-					<th scope="row">activeClass</th>
+					<th scope="row">activeClassName</th>
 					<td>String</td>
-					<td>myPlaceholder_active</td>
+					<td>my_placeholder_active</td>
 					<td>활성시 class 이름</td>
 				</tr>
 				<tr>
@@ -200,7 +96,7 @@
 		<pre>
 			$('.myPlaceholder').myPlaceholder({
 				isForce: true,
-				activeClass: 'active',
+				activeClassName: 'active',
 				installCallback: function() {
 					console.log( 'install' )
 				},
@@ -237,7 +133,6 @@
 			<button type="button" class="myPlaceholder3_disable">비활성</button>
 			<button type="button" class="myPlaceholder3_enable">활성</button>
 		</p>
-
 	</div>
 
 	<script type="text/javascript">
@@ -294,10 +189,6 @@
 			$('.myPlaceholder3').myPlaceholder('enable')
 			$('.myPlaceholder3_status').text('활성')
 		});
-
-		// setTimeout(function(){
-		// 	$('.myPlaceholder3').myPlaceholder('destroy')
-		// }, 5000)
 	</script>
 </div>
 
