--- a/tab.html
+++ b/tab.html
@@ -3,10 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Tab | myComponent</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1,  user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="style/base.css">
 	<link rel="stylesheet" type="text/css" href="style/default_layout.css">
 	<link rel="stylesheet" type="text/css" href="style/default_component.css">
 	<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="script/tab.js"></script>
 
 	<!-- guide -->
 	<link rel="stylesheet" type="text/css" href="guide/style.css">
@@ -16,54 +18,6 @@
 
 <h1 class="guide_h1">Tab</h1>
 <p class="guide_p"></p>
-
-
-<script type="text/javascript">
-	$.fn.myTab = function( _option ){
-		return this.each( function(){
-			var $this = $( this )
-			var $target = $( $this.attr('href') )
-			var isOn = false;
-			var events;
-
-			var option = $.extend({
-				activeEvent: 'click'
-			}, _option)
-			
-			// $target 없으면 종료
-			if ( $target.length == 0 ) {
-				console.warn('No target!')
-				return
-			}
-
-			if (typeof(option.activeEvent) == 'string') {
-				events = option.activeEvent.split(',')
-			} else {
-				events = option.activeEvent
-			}
-
-			for (var i = events.length-1; i >= 0; i--) {
-				$this.on(events[i], function( e ){
-					if (e.type == 'click') {
-						e.preventDefault()
-					}
-
-					$target.toggle()
-
-					// 액션 종료 후 콜백
-					if (typeof(option.eventCallback) == 'function') {
-						option.eventCallback( e )
-					}
-				})
-			}
-
-			// 설치 후 콜백
-			if (typeof(option.installCallback) == 'function') {
-				option.installCallback()
-			}
-		})
-	}
-</script>
 
 
 <h2 class="guide_h2">Option</h2>
