slider css3 add

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 			<li><a href="placeholder.html">placeholder</a></li>
 			<li><a href="tooltip.html">tooltip</a></li>
 			<li><a href="tab.html">tab</a></li>
+			<li><a href="slider.html">slider</a></li>
+			<li><a href="swipeslider.html">swipeslider</a></li>
+			<li><a href="swipescroll.html">swipescroll</a></li>
 		</ul>
 		<ul>
 			<li><a href="full_layout.html" target="_blank">full layout</a></li>
