--- a/slider.html
+++ b/slider.html
@@ -24,16 +24,29 @@
 	<div class="guide_test">
 
 		<ul class="slider">
-			<li style="width:300px; height:100px; line-height:100px; font-size:20px; text-align:center; color:#fff; background:red">1</li>
-			<li style="width:300px; height:100px; line-height:100px; font-size:20px; text-align:center; color:#fff; background:green">2</li>
-			<li style="width:300px; height:100px; line-height:100px; font-size:20px; text-align:center; color:#fff; background:blue">3</li>
+			<li style="width:300px; height:100px; line-height:100px; font-size:20px; text-align:center; color:#fff; background:red"><a href="" style="display:block;">1</a></li>
+			<li style="width:300px; height:100px; line-height:100px; font-size:20px; text-align:center; color:#fff; background:green"><a href="" style="display:block;">2</a></li>
+			<li style="width:300px; height:100px; line-height:100px; font-size:20px; text-align:center; color:#fff; background:blue"><a href="" style="display:block;">3</a></li>
 		</ul>
 		<button type="button" class="to-prev">이전</button>
 		<button type="button" class="to-next">다음</button>
+		<button type="button" class="to1">1번가기</button>
+		<button type="button" class="to2">2번가기</button>
+		<button type="button" class="to3">3번가기</button>
 		<script>
 			$('.slider').mySlider({
 				$prev: $('.to-prev'),
 				$next: $('.to-next')
+			});
+
+			$('.to1').on('click', function(){
+				$('.slider').mySlider('toIdx', 0);
+			});
+			$('.to2').on('click', function(){
+				$('.slider').mySlider('toIdx', 1);
+			});
+			$('.to3').on('click', function(){
+				$('.slider').mySlider('toIdx', 2);
 			});
 		</script>
 		
